# CodeSnap

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
codesnap/: __init__.py  comparators.py  core.py  metadata.py  registry.py  serializers.py
tensor_dumper/: __init__.py  comparators.py  core.py  registry.py
tests/: __init__.py  run_tests.py  test_basic.py  test_numpy.py  test_torch.py
