[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesnap"
version = "0.1.0"
description = "A comprehensive debugging tool for ML/DL with complete reproducibility tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Wang Zhixin", email = "wangzx@sii.edu.cn"}
]
keywords = ["debugging", "tensor", "numpy", "pytorch", "machine-learning", "deep-learning", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/wangzhixin-ai/CodeSnap"
"Bug Reports" = "https://github.com/wangzhixin-ai/CodeSnap/issues"
"Source" = "https://github.com/wangzhixin-ai/CodeSnap"

[project.optional-dependencies]
torch = ["torch"]
numpy = ["numpy"]
all = ["torch", "numpy"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
exclude = ["tests*"]
